<resources>
    <string name="app_name">LanGuide</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="Title" translatable="false">LanGuide</string>
    <string name="action_register">I haven´t got an account. REGISTER</string>
    <string name="Start_Test">Start Test</string>
    <string name="See_past_results">See Statistics</string>
    <string name="Test">Test</string>
    <string name="Profile">Profile</string>
    <string name="role_spinner">Role</string>
    <string-array name="Role">
        <item>Student</item>
        <item>Teacher</item>
    </string-array>
    <string name="action_log_out">LOGOUT</string>
    <string name="Difficulty">Choose Difficulty</string>
    <string-array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="ChooseTest">Choose Test</string>
    <string-array name="choose">
        <item>Listening</item>
        <item>Vocabulary</item>
        <item>Writing</item>
        <item>Speaking</item>
        <item>Reading</item>
    </string-array>
    <string name="iconReading" translatable="false">IconReading</string>
    <string name="Reading">Reading</string>
    <string name="Listening">Listening</string>
    <string name="Vocabulary">Vocabulary</string>
    <string name="Writing">Writing</string>
    <string name="Speaking">Speaking</string>
    <string name="Finish">FINISH</string>
    <string name="test_result">Test result</string>
    <string name="backToMain">Back to main</string>
    <string name="resetTests">Reset tests</string>
    <string name="playAudio">PLAY!</string>
    <string name="next">Next</string>
    <string name="reading_tests">Reading Tests</string>
    <string name="listening_tests">Listening Tests</string>
    <string name="solutions">SOLUTIONS</string>
    <string name="vocabulary_tests">Vocabulary Tests</string>
    <string name="record" translatable="false">RECORD</string>
    <string name="stop" translatable="false">STOP</string>
    <string name="play" translatable="false">PLAY</string>
    <string name="writing_tests" translatable="false">Writing Tests</string>
    <string name="speaking_tests" translatable="false">Speaking tests</string>
    <string name="fill_with_your_answer" translatable="false">Fill with your answer</string>

</resources>