<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.student.testActivities.ListeningTestActivity">

    <RelativeLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/test_header"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/idTitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Listening"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/idTitleExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTitle3"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:text="@string/Title"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/test_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTitleExercise"
            android:textColor="@android:color/primary_text_dark"
            android:text="Instructions of the test will be replaced with the actual"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="14sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Header">
        <Button
            android:id="@+id/playAudio"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:background="@drawable/round_borders"
            android:layout_centerHorizontal="true"
            android:text="@string/playAudio"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/exercise_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="48dp"
            android:gravity="center_horizontal"
            android:text="Exercise content, this is a test of the content which will
                be replaced later with an audio file to be played and
                proceed with the exercise"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />
        <EditText
            android:id="@+id/answerListening"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_below="@id/exercise_text"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <Button
            android:id="@+id/nextQuestion"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:layout_toRightOf="@id/answerListening"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@id/exercise_text"
            android:background="@drawable/round_borders"
            android:text="@string/next"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/finishTest"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:layout_below="@id/answerListening"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/round_borders"
            android:textColor="@color/black"
            android:text="@string/Finish"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>