<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/buttonTest"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:fontFamily="cursive"
            android:text="@string/Test"
            android:textColor="@color/white"
            android:textSize="42sp"
            app:backgroundTint="@android:color/holo_orange_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonProfile"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:enabled="false"
            android:fontFamily="cursive"
            android:text="@string/Profile"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="42sp"
            app:backgroundTint="@android:color/holo_orange_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/Separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_separator"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/Separator"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/idLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/action_log_out"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            app:backgroundTint="@android:color/holo_red_light"
            android:layout_below="@id/idRoleProfile"
            android:layout_marginTop="@dimen/profile_separator"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/idEmailProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="1.0" />

        <TextView
            android:id="@+id/idNameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_alignParentStart="true"
            android:layout_below="@id/idEmailProfile"/>

        <TextView
            android:id="@+id/idRoleProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_alignParentStart="true"
            android:layout_below="@id/idNameProfile"/>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
    <!--
                android:layout_alignParentLeft="true"
    -->